<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<EditTextPreference
    android:title="@string/pref_location_title"
    android:key="@string/pref_location_key"
    android:defaultValue="@string/pref_location_default"
    android:inputType="text"
    android:singleLine="true"
    />
  <ListPreference
      android:title="@string/temp_title"
      android:key="@string/pref_units_key"
      android:defaultValue="@string/temp_defaultValue"
      android:entries="@array/temp_listEntries"
      android:entryValues="@array/temp_listValue"
      />
    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>